// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      5
    </p>
    <p>
      5
    </p>
  </div>
</DocumentFragment>
`;

exports[`simple 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      6
    </p>
    <p>
      6
    </p>
  </div>
</DocumentFragment>
`;

exports[`withModel 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    0
  </div>
</DocumentFragment>
`;

exports[`withModel 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    1
  </div>
</DocumentFragment>
`;
